All web with all recipes done.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/lasagna.html">Lasagna</a>
-
+    <ul>
+        <a href="./recipes/lasagna.html">Lasagna</a>
+        <a href="./recipes/fried_chicken.html">Fried Chicken</a>
+        <a href="./recipes/coffee.html">Coffee</a>
+    </ul>
     
+
+
 </body>
 </html>
