--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -1,26 +1,25 @@
-<h1>Lasagna</h1>
+<h1>Coffee</h1>
 
-<img src="../images/lasagna.png">
+<img src="../images/coffee.jpg">
 
 <h2>Description</h2>
-<p>This delicious dish is know to be my favourite dish since I was little. This is due to is amazing flavour and my passion for pasta</p>
-<p>Due to that love to lasagna, I've decided to show you how you all can make this amazing dish at home</p>
+<p>This delicious drink makes us happy all mornings.</p>
+<p>Due to that love to coffee, I've decided to show you how you all can make it and enjoy a good drink in the mornings</p>
 
 <h2>Ingredients</h2>
 
 <ul>
-    <li>Meat</li>
-    <li>Cheese</li>
-    <li>Carrots</li>
-    <li>Tomato</li>
-    <li>Milk</li>
+    <li>Coffee</li>
+    <li>Sugar (Just if you like it)</li>
+    <li>Water</li>
+    
 </ul>
 
 <h2>Steps</h2>
 
 <ol>
-    <li>Pour the milk into a bowl</li>
-    <li>Chop the carrots and tomatoes and mix them together</li>
-    <li>Add the meat and mix for two minutes</li>
-    <li>Build the lasagna up and put it on the oven</li>
+    <li>Boil some water</li>
+    <li>Add the coffe to the water</li>
+    <li>Enjoy your fresh made coffee</li>
+    
 </ol>
