Error on the recipe list fixed.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Odin Recipes</h1>
 
     <ul>
-        <a href="./recipes/lasagna.html">Lasagna</a>
-        <a href="./recipes/fried_chicken.html">Fried Chicken</a>
-        <a href="./recipes/coffee.html">Coffee</a>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/fried_chicken.html">Fried Chicken</a></li>
+        <li><a href="./recipes/coffee.html">Coffee</a></li>
     </ul>
     
 
