--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -3,7 +3,7 @@
 <img src="../images/fried_chicken.png">
 
 <h2>Description</h2>
-<p>This delicious dish is know to be my brother's favourite dish since he was little.</p>
+<p>This delicious dish is known to be my brother's favourite dish since he was little.</p>
 <p>Due to that love to fried chicken (not only by him, but also by me), I've decided to show you how you all can make this amazing dish at home</p>
 
 <h2>Ingredients</h2>
