--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,7 @@
 <img src="../images/lasagna.png">
 
 <h2>Description</h2>
-<p>This delicious dish is know to be my favourite dish since I was little. This is due to is amazing flavour and my passion for pasta</p>
+<p>This delicious dish is known to be my favourite dish since I was little. This is due to is amazing flavour and my passion for pasta</p>
 <p>Due to that love to lasagna, I've decided to show you how you all can make this amazing dish at home</p>
 
 <h2>Ingredients</h2>
